Add API to create account
