# src/resources/account/account.controller.ts
@@ -1,9 +1,11 @@
-import { Controller, Get, Request, Response, Route, Security, Tags } from "tsoa";
+import { Body, Controller, Get, Post, Request, Response, Route, Security, SuccessResponse, Tags } from "tsoa";
 
 import { AuthenticatedRequest } from "#authentication";
-import { UnauthorizedError, UnauthorizedErrorResponse } from "#common/errors";
+import { UnauthorizedError, UnauthorizedErrorResponse, ValidationError, ValidationErrorResponse } from "#common/errors";
+import { HttpStatus } from "#common/utilities";
+import { AuthenticationResponse } from "#resources/auth/auth.types";
 import { AccountService } from "./account.service";
-import { AccountResponse } from "./account.types";
+import { AccountCreateBody, AccountResponse } from "./account.types";
 
 @Route("account")
 @Tags("Account")
@@ -16,5 +18,18 @@ export class AccountController extends Controller {
   @Response<UnauthorizedErrorResponse>(UnauthorizedError.status, UnauthorizedError.message)
   public async getCurrent(@Request() request: AuthenticatedRequest): Promise<AccountResponse> {
     return AccountService.getAccount(request.user.id);
+  }
+
+  /**
+   * @summary Create an account
+   */
+  @SuccessResponse(HttpStatus.CREATED)
+  @Response<ValidationErrorResponse>(ValidationError.status, ValidationError.message)
+  @Post()
+  public async createTodo(
+    @Body() body: AccountCreateBody,
+  ): Promise<AuthenticationResponse> {
+    this.setStatus(HttpStatus.CREATED);
+    return AccountService.createAccount(body);
   }
 }
